# time-tracker-edge

./: Cargo.toml  README.md
dbschema/: default.esdl
dbschema/migrations/: 00001.edgeql  00002.edgeql  00003.edgeql  00004.edgeql
src/: main.rs
