[package]
name = "time-tracker-edge"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tte"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = {version = "4.3.0", features = ["derive"]}
dirs = "5.0.1"
edgedb-protocol = "0.5.0"
edgedb-tokio = "0.4.0"
reedline = "0.19.1"
serde = "1.0.163"
tokio = "1.28.1"
toml = "0.7.4"
